Views: Change View::RequestFocus to respect keyboard accessibility.

This CL fixes some regressions introduced in http://crrev.com/1894383002/. These
regression are caused due to the change in View::RequestFocus() from
IsFocusable() to IsAccessibilityFocusable().

On a mouse click on a CustomButton, CustomButton::MousePressed() requests focus
on the button, if it has request_focus_on_press_ set to true. It turns out that
most button subclasses, do not explicitly set request_focus_on_press_ to false,
which has a default value of true. These custom buttons which are accessibility
focusable, can now gain focus on a mouse press, hence the bug.

This CL changes View::RequestFocus to use IsFocusable when keyboard
accessibility is off (i.e on Non-Mac platforms), hence fixing bugs 609701,
610186, 610235, 610740, 610802, 610664. This is how View::RequestFocus behaved
before crrev.com/1894383002 on Non-Mac platforms. Also, on Mac, since
View::RequestFocus now respects keyboard accessibility, bug 611280 is also
fixed.

BUG=609701, 610186, 610235, 610740, 610802, 610664, 564912, 611280

Review-Url: https://codereview.chromium.org/1973073003
Cr-Commit-Position: refs/heads/master@{#393781}

Former-commit-id: 8c6b2ee186d786623f0e4cb6d05c08c934c0ff9b